# prince-of-tennis-client

./: .clang-format  CMakeLists.txt  README.md  aoi.c  build.sh  kkr.c  yutaka  yutaka.c  yutaka2.c
.github/: CODEOWNERS  copilot-instructions.md
src/: main.cpp
src/looper/: looper.cpp  looper.hpp
src/scene_manager/: scene_manager.cpp  scene_manager.hpp  scene_type.hpp
src/util/: log.hpp
